// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`State set & get 1`] = `
GlobalState {
  "nextNotificationId": null,
  "state": Object {
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 2`] = `
GlobalState {
  "nextNotificationId": 1,
  "state": Object {
    "": "value2",
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 3`] = `
GlobalState {
  "nextNotificationId": null,
  "state": Object {
    "": "value2",
    "key": "value",
  },
  "watchers": Array [],
}
`;

exports[`State set & get 4`] = `
GlobalState {
  "nextNotificationId": null,
  "state": "value3",
  "watchers": Array [],
}
`;

exports[`State set & get 5`] = `
GlobalState {
  "nextNotificationId": null,
  "state": "value4",
  "watchers": Array [],
}
`;

exports[`State set & get 6`] = `
GlobalState {
  "nextNotificationId": null,
  "state": Object {
    "": "value5",
  },
  "watchers": Array [],
}
`;
